force-app/main/default/objects/Costo__c/Costo__c.object-meta.xml
<CustomObject>
    <description>Detalle de costos de productos</description>
    <label>Costo</label>
    <nameField>
        <label>Costo Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Costos</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>