force-app/main/default/objects/Costo__c/fields/Centro_de_Abastecimiento__c.field-meta.xml
<CustomField>
    <fullName>Centro_de_Abastecimiento__c</fullName>
    <label>Centro de Abastecimiento</label>
    <length>10</length>
    <type>Text</type>
</CustomField>