force-app/main/default/objects/Costo__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <description>Codificacion del cliente SAP</description>
    <externalId>true</externalId>
    <label>Cliente</label>
    <length>18</length>
    <type>Text</type>
</CustomField>