force-app/main/default/objects/Costo__c/fields/Codigo_de_Costo__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_Costo__c</fullName>
    <externalId>true</externalId>
    <label>Codigo de Costo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>