force-app/main/default/objects/Costo__c/fields/Codigo_del_Producto__c.field-meta.xml
<CustomField>
    <fullName>Codigo_del_Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SKU producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Costos</relationshipLabel>
    <relationshipName>Costos</relationshipName>
    <type>Lookup</type>
</CustomField>