force-app/main/default/objects/Costo__c/fields/CostoProducto__c.field-meta.xml
<CustomField>
    <fullName>CostoProducto__c</fullName>
    <description>Costo del producto por SKU / Cliente / Sucursal</description>
    <label>Costo Producto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>