force-app/main/default/objects/Costo__c/fields/Lista__c.field-meta.xml
<CustomField>
    <fullName>Lista__c</fullName>
    <description>Lita de costo</description>
    <label>Lista</label>
    <length>10</length>
    <type>Text</type>
</CustomField>