force-app/main/default/objects/Costo__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <externalId>true</externalId>
    <label>SKU</label>
    <length>18</length>
    <type>Text</type>
</CustomField>