force-app/main/default/objects/Costo__c/fields/TextoUMV__c.field-meta.xml
<CustomField>
    <fullName>TextoUMV__c</fullName>
    <label>TextoUMV</label>
    <length>80</length>
    <type>Text</type>
</CustomField>