force-app/main/default/objects/Costo__c/fields/TextSKU__c.field-meta.xml
<CustomField>
    <fullName>TextSKU__c</fullName>
    <label>TextSKU</label>
    <length>20</length>
    <type>Text</type>
</CustomField>