force-app/main/default/objects/Costo__c/fields/TextUMV__c.field-meta.xml
<CustomField>
    <fullName>TextUMV__c</fullName>
    <label>TextUMV</label>
    <length>20</length>
    <type>Text</type>
</CustomField>