force-app/main/default/objects/Costo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Centro_de_Abastecimiento__c</columns>
    <columns>CostoProducto__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>TextoSKU__c</columns>
    <columns>TextoUMV__c</columns>
    <columns>Codigo_del_Producto__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TextoSKU__c</field>
        <operation>equals</operation>
        <value>104330270</value>
    </filters>
    <label>All</label>
</ListView>